--- a/WingMate_iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/WingMate_iOS/Storyboards/Base.lproj/Main.storyboard
@@ -698,22 +698,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FZ8-RP-Obh">
-                                <rect key="frame" x="182.5" y="357.5" width="49" height="50"/>
-                                <color key="backgroundColor" name="PurpleThemeColor"/>
-                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                                <state key="normal" title="Logout">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="logoutButtonPressed:" destination="5dY-Ne-mfy" eventType="touchUpInside" id="cwq-Or-wtw"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyl-Mj-ZEv">
                                 <rect key="frame" x="20" y="200" width="110.5" height="35"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
@@ -749,7 +733,7 @@
                                 <rect key="frame" x="0.0" y="245" width="414" height="568"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uvh-Wg-bLW">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="810"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJL-G2-WWA">
                                                 <rect key="frame" x="16" y="10" width="382" height="30"/>
@@ -969,6 +953,34 @@
                                                     <action selector="disableLikeSwitch:" destination="5dY-Ne-mfy" eventType="valueChanged" id="vz2-ru-AVj"/>
                                                 </connections>
                                             </switch>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FZ8-RP-Obh">
+                                                <rect key="frame" x="16" y="701" width="382" height="50"/>
+                                                <color key="backgroundColor" name="PurpleThemeColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="UBw-lh-CnP"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                                                <state key="normal" title="Logout">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="logoutButtonPressed:" destination="5dY-Ne-mfy" eventType="touchUpInside" id="cwq-Or-wtw"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvt-pR-LrQ">
+                                                <rect key="frame" x="16" y="770" width="382" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="oQC-R0-BhE"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -992,6 +1004,7 @@
                                             <constraint firstItem="fJL-G2-WWA" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="IKg-rO-fu1"/>
                                             <constraint firstItem="Ykg-H3-PEO" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="JTF-ve-tLJ"/>
                                             <constraint firstItem="Ykg-H3-PEO" firstAttribute="top" secondItem="JvG-ct-PxD" secondAttribute="bottom" constant="10" id="KhB-Py-t68"/>
+                                            <constraint firstItem="FZ8-RP-Obh" firstAttribute="top" secondItem="qAd-aq-8JD" secondAttribute="bottom" constant="40" id="KwF-5O-Rve"/>
                                             <constraint firstItem="6xw-Lv-xn7" firstAttribute="top" secondItem="tKT-oi-a8k" secondAttribute="bottom" constant="10" id="Lll-gq-R7d"/>
                                             <constraint firstItem="GtT-em-Aoz" firstAttribute="top" secondItem="Osy-ws-9cA" secondAttribute="bottom" constant="10" id="Nj0-mF-ZJ0"/>
                                             <constraint firstItem="qAd-aq-8JD" firstAttribute="top" secondItem="k1o-Yr-Imq" secondAttribute="bottom" constant="10" id="Nmm-So-96O"/>
@@ -1014,6 +1027,7 @@
                                             <constraint firstItem="PAZ-mU-PCr" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="dVy-P8-e0k"/>
                                             <constraint firstItem="sI5-Sh-mAT" firstAttribute="top" secondItem="Ykg-H3-PEO" secondAttribute="bottom" constant="19" id="dYB-Pq-Tjg"/>
                                             <constraint firstAttribute="trailing" secondItem="qAd-aq-8JD" secondAttribute="trailing" constant="16" id="eIA-16-Dxs"/>
+                                            <constraint firstItem="FZ8-RP-Obh" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="fQf-Qz-pig"/>
                                             <constraint firstItem="GtT-em-Aoz" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="gEn-jS-fR0"/>
                                             <constraint firstItem="Kpv-VW-a5s" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="htV-Us-Usd"/>
                                             <constraint firstAttribute="trailing" secondItem="gz5-Zj-PON" secondAttribute="trailing" constant="16" id="iHg-v4-hqh"/>
@@ -1022,8 +1036,9 @@
                                             <constraint firstItem="9qa-dh-bfd" firstAttribute="top" secondItem="cmy-x9-2E3" secondAttribute="bottom" constant="20" id="nq6-O5-qqr"/>
                                             <constraint firstItem="tUD-KU-tTk" firstAttribute="top" secondItem="6xw-Lv-xn7" secondAttribute="bottom" constant="19" id="o7D-GI-x5H"/>
                                             <constraint firstAttribute="trailing" secondItem="Kpv-VW-a5s" secondAttribute="trailing" constant="16" id="oDT-vw-5qW"/>
-                                            <constraint firstAttribute="height" constant="700" id="owc-rU-ODx"/>
+                                            <constraint firstAttribute="height" constant="810" id="owc-rU-ODx"/>
                                             <constraint firstItem="9qa-dh-bfd" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="p0d-LT-Feg"/>
+                                            <constraint firstAttribute="bottom" secondItem="Pvt-pR-LrQ" secondAttribute="bottom" constant="10" id="pDz-JS-ovK"/>
                                             <constraint firstItem="fJL-G2-WWA" firstAttribute="top" secondItem="Uvh-Wg-bLW" secondAttribute="top" constant="10" id="paS-Do-RbW"/>
                                             <constraint firstAttribute="trailing" secondItem="Osy-ws-9cA" secondAttribute="trailing" constant="16" id="q6J-6W-jlY"/>
                                             <constraint firstItem="8jx-XE-s3T" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="qW1-Od-gMt"/>
@@ -1033,8 +1048,10 @@
                                             <constraint firstItem="tKT-oi-a8k" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="uDK-yz-rMc"/>
                                             <constraint firstItem="jRN-Jy-kRr" firstAttribute="top" secondItem="Ykg-H3-PEO" secondAttribute="bottom" constant="20" id="ug6-h2-wFa"/>
                                             <constraint firstItem="JvG-ct-PxD" firstAttribute="top" secondItem="6xw-Lv-xn7" secondAttribute="bottom" constant="20" id="v8V-yF-Elj"/>
+                                            <constraint firstItem="Pvt-pR-LrQ" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="vzA-xA-Owa"/>
                                             <constraint firstAttribute="trailing" secondItem="jRN-Jy-kRr" secondAttribute="trailing" constant="16" id="wCc-JV-0qU"/>
                                             <constraint firstItem="8jx-XE-s3T" firstAttribute="top" secondItem="PAZ-mU-PCr" secondAttribute="bottom" constant="20" id="wFr-oL-tdE"/>
+                                            <constraint firstAttribute="trailing" secondItem="Pvt-pR-LrQ" secondAttribute="trailing" constant="16" id="x4z-QS-aqj"/>
                                             <constraint firstAttribute="trailing" secondItem="8jx-XE-s3T" secondAttribute="trailing" constant="16" id="xGX-90-SH0"/>
                                             <constraint firstItem="Osy-ws-9cA" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="xQl-Nl-3ix"/>
                                             <constraint firstItem="hIY-6B-cDV" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="xiG-pH-3jZ"/>
@@ -1042,6 +1059,7 @@
                                             <constraint firstItem="cmy-x9-2E3" firstAttribute="top" secondItem="jRN-Jy-kRr" secondAttribute="bottom" constant="10" id="yAn-2C-YG9"/>
                                             <constraint firstItem="WcE-Z5-vT2" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="ya5-KJ-j9D"/>
                                             <constraint firstItem="qAd-aq-8JD" firstAttribute="leading" secondItem="Uvh-Wg-bLW" secondAttribute="leading" constant="16" id="yvC-X7-b4f"/>
+                                            <constraint firstAttribute="trailing" secondItem="FZ8-RP-Obh" secondAttribute="trailing" constant="16" id="zMh-wo-LGf"/>
                                             <constraint firstItem="Osy-ws-9cA" firstAttribute="top" secondItem="m72-kH-9bH" secondAttribute="bottom" constant="20" id="zmy-XN-A6P"/>
                                         </constraints>
                                     </view>
@@ -1053,12 +1071,6 @@
                                     <constraint firstItem="Uvh-Wg-bLW" firstAttribute="leading" secondItem="kD6-ND-FxX" secondAttribute="leading" id="rT3-vY-4UT"/>
                                 </constraints>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvt-pR-LrQ">
-                                <rect key="frame" x="186" y="790.5" width="42" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="q5K-h5-AUN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1073,21 +1085,12 @@
                             <constraint firstItem="5Oa-MR-T2R" firstAttribute="leading" secondItem="q5K-h5-AUN" secondAttribute="leading" constant="20" id="PdI-Hk-q2h"/>
                             <constraint firstItem="wRK-4R-vEt" firstAttribute="leading" secondItem="nxh-2l-dyb" secondAttribute="leading" id="Wt3-c7-4Hx"/>
                             <constraint firstItem="Uvh-Wg-bLW" firstAttribute="width" secondItem="DOh-uM-rAi" secondAttribute="width" id="aMe-go-imQ"/>
-                            <constraint firstItem="q5K-h5-AUN" firstAttribute="bottom" secondItem="Pvt-pR-LrQ" secondAttribute="bottom" constant="8" id="dJZ-h3-6Sh"/>
                             <constraint firstItem="kD6-ND-FxX" firstAttribute="trailing" secondItem="q5K-h5-AUN" secondAttribute="trailing" id="eTp-fC-1SD"/>
                             <constraint firstItem="nxh-2l-dyb" firstAttribute="top" secondItem="q5K-h5-AUN" secondAttribute="top" constant="20" id="fVq-Ko-Vgh"/>
                             <constraint firstItem="q5K-h5-AUN" firstAttribute="trailing" secondItem="nxh-2l-dyb" secondAttribute="trailing" constant="20" id="gsM-p0-ylT"/>
                             <constraint firstItem="5Oa-MR-T2R" firstAttribute="top" secondItem="q5K-h5-AUN" secondAttribute="top" constant="20" id="hgJ-9h-rch"/>
                             <constraint firstItem="Pyl-Mj-ZEv" firstAttribute="top" secondItem="5Oa-MR-T2R" secondAttribute="bottom" constant="20" id="iNp-rX-WC4"/>
-                            <constraint firstItem="FZ8-RP-Obh" firstAttribute="centerX" secondItem="DOh-uM-rAi" secondAttribute="centerX" id="tmP-8T-YpJ"/>
-                            <constraint firstItem="Pvt-pR-LrQ" firstAttribute="centerX" secondItem="q5K-h5-AUN" secondAttribute="centerX" id="uvN-Du-oJG"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="FZ8-RP-Obh"/>
-                                <exclude reference="Pvt-pR-LrQ"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="4oE-71-jRZ"/>
                     <connections>
@@ -1124,7 +1127,7 @@
                             </imageView>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wot-Xb-rB9">
                                 <rect key="frame" x="16" y="264" width="382" height="598"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
@@ -1832,7 +1835,7 @@
                             </imageView>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDW-iq-dJ1">
                                 <rect key="frame" x="16" y="264" width="382" height="598"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
