--- a/WingMate_iOS/View Controllers/Terms And Conditions/TermsAndConditionsVC.xib
+++ b/WingMate_iOS/View Controllers/Terms And Conditions/TermsAndConditionsVC.xib
@@ -9,10 +9,19 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-Bold.ttf">
+            <string>Baloo2-Bold</string>
+        </array>
+        <array key="OpenSans-Bold.ttf">
+            <string>OpenSans-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TermsAndConditionsVC" customModule="WingMate_iOS" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="webView" destination="FAe-0B-bD1" id="dCg-BJ-yyn"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,19 +33,11 @@
                     <rect key="frame" x="20" y="64" width="72" height="72"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms &amp; Conditions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuh-qp-ShF">
-                    <rect key="frame" x="20" y="156" width="262" height="35"/>
+                    <rect key="frame" x="20" y="156" width="261" height="35"/>
                     <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hox-Pk-ctC">
-                    <rect key="frame" x="20" y="211" width="374" height="573"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.  Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.  Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.  Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                    <color key="textColor" systemColor="labelColor"/>
-                    <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="13"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8r8-qh-6gY">
                     <rect key="frame" x="52" y="804" width="150" height="50"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -77,22 +78,30 @@
                         <action selector="agreeButtonPressed:" destination="-1" eventType="touchUpInside" id="ZUc-Tx-Z42"/>
                     </connections>
                 </button>
+                <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FAe-0B-bD1">
+                    <rect key="frame" x="16" y="201" width="382" height="583"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <wkWebViewConfiguration key="configuration">
+                        <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                        <wkPreferences key="preferences"/>
+                    </wkWebViewConfiguration>
+                </wkWebView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="8r8-qh-6gY" firstAttribute="top" secondItem="FAe-0B-bD1" secondAttribute="bottom" constant="20" id="25Q-LX-KW0"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FAe-0B-bD1" secondAttribute="trailing" constant="16" id="2kt-Vl-Jdc"/>
                 <constraint firstItem="8r8-qh-6gY" firstAttribute="centerY" secondItem="S4m-8K-Rph" secondAttribute="centerY" id="Hcp-hR-uhF"/>
                 <constraint firstItem="I63-nJ-F7p" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="Inf-ne-nGg"/>
                 <constraint firstItem="S4m-8K-Rph" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="80" id="OMG-lg-iIS"/>
+                <constraint firstItem="FAe-0B-bD1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="PVg-JW-d4e"/>
                 <constraint firstItem="xuh-qp-ShF" firstAttribute="top" secondItem="I63-nJ-F7p" secondAttribute="bottom" constant="20" id="QZm-fl-Fcd"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Hox-Pk-ctC" secondAttribute="trailing" constant="20" id="V0h-dt-fYZ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="S4m-8K-Rph" secondAttribute="bottom" constant="8" id="a7N-uu-cgz"/>
+                <constraint firstItem="FAe-0B-bD1" firstAttribute="top" secondItem="xuh-qp-ShF" secondAttribute="bottom" constant="10" id="aBN-0s-ZVr"/>
                 <constraint firstItem="8r8-qh-6gY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="-80" id="crH-w7-Dex"/>
-                <constraint firstItem="Hox-Pk-ctC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="goK-lZ-dJ0"/>
                 <constraint firstItem="xuh-qp-ShF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="mTK-Xb-vcj"/>
-                <constraint firstItem="S4m-8K-Rph" firstAttribute="top" secondItem="Hox-Pk-ctC" secondAttribute="bottom" constant="20" id="qW9-uE-NaT"/>
                 <constraint firstItem="I63-nJ-F7p" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="wDD-K6-Lux"/>
-                <constraint firstItem="Hox-Pk-ctC" firstAttribute="top" secondItem="xuh-qp-ShF" secondAttribute="bottom" constant="20" id="wnP-Hh-r75"/>
             </constraints>
             <point key="canvasLocation" x="-84.057971014492765" y="72.991071428571431"/>
         </view>
@@ -102,9 +111,6 @@
         <namedColor name="PurpleThemeColor">
             <color red="0.28999999165534973" green="0.23899999260902405" blue="0.37599998712539673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
